# oak

./: Cargo.toml  README.md  flake.nix  justfile  oak_crypto_deps.txt  oak_restricted_kernel_deps.txt  results.csv  results_crypto.csv  results_rk.csv  stage0_deps.txt
oak_containers_kernel/patches/: virtio-dma.patch
oak_containers_launcher/src/: qemu.rs
oak_containers_stage1/src/: main.rs
oak_containers_system_image/: build.sh
oak_containers_system_image/files/etc/systemd/system/: root-passwd.service
oak_crypto/: calculate.sh  input.txt  output.txt
oak_restricted_kernel/: Cargo.toml  input.txt  output.txt
oak_sev_guest/: Cargo.toml
stage0/: Cargo.toml  input.txt  output.txt  output2.txt  replace.py
stage0/src/: sev.rs  zero_page.rs
