[package]
name = "oak_restricted_kernel"
version = "0.1.0"
authors = ["Andri Saar <andrisaar@google.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["vsock_channel"]
virtio_console_channel = ["virtio-drivers"]
vsock_channel = ["oak_virtio"]
serial_channel = ["uart_16550"]
simple_io_channel = ["oak_simple_io"]

[dependencies]
oak_channel = { workspace = true }
oak_core = { workspace = true }
oak_crypto = { workspace = true }
oak_dice = { workspace = true }
oak_linux_boot_params = { workspace = true }
oak_simple_io = { workspace = true, optional = true }
oak_restricted_kernel_dice = { workspace = true }
oak_restricted_kernel_interface = { workspace = true }
oak_sev_guest = { workspace = true, features = ["rust-crypto"] }
oak_virtio = { workspace = true, optional = true }
sev_serial = { workspace = true }

rust-hypervisor-firmware-virtio = { path = "../third_party/rust-hypervisor-firmware-virtio" }
acpi = "*"
aml = "*"
anyhow = { version = "*", default-features = false }
arrayvec = { version = "*", default-features = false }
atomic_refcell = "*"
bitflags = "*"
bitvec = { version = "*", default-features = false }
coset = { version = "*", default-features = false }
goblin = { version = "*", default-features = false, features = [
  "elf32",
  "elf64",
  "endian_fd",
] }
hex = { version = "*", default-features = false, features = ["alloc"] }
hpke = { version = "*", default-features = false, features = ["alloc"] }
libm = "*"
linked_list_allocator = { version = "*", features = ["alloc_ref"] }
log = "*"
p256 = { version = "*", default-features = false, features = ["ecdsa"] }
self_cell = "*"
spinning_top = "*"
static_assertions = "*"
strum = { version = "*", default-features = false, features = ["derive"] }
uart_16550 = { version = "*", optional = true }
virtio-drivers = { version = "*", optional = true }
x86_64 = "*"
zerocopy = "*"
zeroize = "*"

[dev-dependencies]
assertables = "*"
