[package]
name = "oak_stage0"
version = "0.1.0"
authors = ["Andri Saar <andrisaar@google.com>"]
edition = "2021"
license = "Apache-2.0"
[features]
default = ["sev"]
sev = []
[dependencies]
oak_attestation = { path = "../oak_attestation" }
oak_attestation_types = { path = "../oak_attestation_types" }
oak_core = { path = "../oak_core", default-features = false }
oak_dice = { workspace = true }
oak_linux_boot_params = { path = "../oak_linux_boot_params" }
oak_proto_rust = { workspace = true }
oak_sev_guest = { workspace = true, features = ["rust-crypto"] }
oak_sev_snp_attestation_report = { workspace = true }
sev_serial = { workspace = true }
oak_stage0_dice = { workspace = true }

anyhow = "*"
bitflags = "*"
coset = { version = "*", default-features = false }
elf = "*"
hex = { version = "*", default-features = false, features = ["alloc"] }
hkdf = { version = "*", default-features = false }
linked_list_allocator = { version = "*", features = ["alloc_ref"] }
log = "*"
p256 = { version = "*", default-features = false, features = ["ecdsa"] }
prost = { version = "*", default-features = false, features = ["prost-derive"] }
prost-types = { version = "*", default-features = false }
rand_core = { version = "*", default-features = false, features = [
  "getrandom",
] }
sha2 = { version = "*", default-features = false, features = ["force-soft"] }
spinning_top = "*"
static_assertions = "*"
strum = { version = "*", default-features = false, features = ["derive"] }
x86_64 = "*"
zerocopy = "*"
zeroize = "*"
